[package]
name = "axum-playground"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.22"
